[#5026] [#5028] Fix V1 advancement field visibility. Fix ModuleArt settings config.

--- a/less/v1/advancement.less
+++ b/less/v1/advancement.less
@@ -1,6 +1,7 @@
 .dnd5e.advancement {
   input[type="text"], input[type="number"], select {
     height: var(--form-field-height);
+    color: var(--color-text-dark-primary);
     &[readonly] {
       color: var(--color-text-dark-6);
       box-shadow: none;
